<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/diary_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.FoodDiary.FoodDiaryFragment">

        <android.support.v7.widget.CardView
            android:id="@+id/today_date_card"
            android:layout_width="314dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="40dp"
            android:elevation="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/what_ate_text"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/today_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="Wednesday 13/02/2019"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/what_ate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enter_what_you_ate_text"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/breakfast_field"
            app:layout_constraintTop_toBottomOf="@+id/today_date_card" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/breakfast_field"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/what_ate_text">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/breakfast_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_breakfast_text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lunch_field"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/breakfast_field">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/lunch_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_lunch_text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dinner_field"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lunch_field">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dinner_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_dinner_text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/radiobuttoncard"
            android:layout_width="320dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:elevation="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dinner_field">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/feeling_today_text"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6">

                    <RadioButton
                        android:id="@+id/red_feeling_bad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00ffffff"
                        android:drawableTop="@drawable/terrible_checkbox_selector"
                        android:button="@color/transparent"
                        android:text="feeling terrible"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/yellow_feeling_pale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00ffffff"
                        android:button="@color/transparent"
                        android:drawableTop="@drawable/pale_checkbox_selector"
                        android:text="Feeling pale"
                        android:textAlignment="center" />

                    <RadioButton
                        android:id="@+id/green_feeling_fine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00ffffff"
                        android:button="@color/transparent"
                        android:drawableTop="@drawable/fine_checkbox_selector"
                        android:text="Feeling good"
                        android:textAlignment="center" />

                </RadioGroup>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_check_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>